[project]
name = "FastAPI-Video-Streaming"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "zhaomaoniu", email = "2667292003@qq.com"},
]
dependencies = [
    "FastAPI>=0.111.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "Apache-2.0"}


[tool.pdm]
distribution = false
